--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -58,7 +58,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>pwr.ite.bedrylo.gui/pwr.ite.bedrylo.gui.HelloApplication</mainClass>
+              <mainClass>pwr.ite.bedrylo.gui/pwr.ite.bedrylo.gui.GIOSApp</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
