--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -42,6 +42,11 @@
       <artifactId>client</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.18.30</version>
+      </dependency>
   </dependencies>
 
   <build>
