--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -6,23 +6,28 @@
 
   <groupId>pwr.ite.bedrylo</groupId>
   <artifactId>gui</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <name>gui</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-<junit.version>5.9.2</junit.version>  </properties>
+<junit.version>5.9.2</junit.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.release>11</maven.compiler.release>
+    <javafx.version>21</javafx.version>
+    <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
+  </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
-      <version>17.0.6</version>
+      <version>20.0.2</version>
     </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-fxml</artifactId>
-      <version>17.0.6</version>
+      <version>20.0.2</version>
     </dependency>
 
 <dependency>
@@ -40,7 +45,7 @@
     <dependency>
       <groupId>pwr.ite.bedrylo</groupId>
       <artifactId>client</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0</version>
     </dependency>
       <dependency>
           <groupId>org.projectlombok</groupId>
@@ -57,9 +62,36 @@
         <version>3.11.0</version>
         <configuration>
           <source>17</source>
-          <target>17</target>
+<target>17</target>
+            <release>17</release>
+            <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>3.3.0</version>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>single</goal>
+                    </goals>
+                </execution>
+            </executions>
+            <!-- Extra options, like specifying the main class (containing main(string[] args)) -->
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>pwr.ite.bedrylo.gui.RunApp</mainClass>
+                    </manifest>
+                </archive>
+                <!-- Type of jar to create -->
+                <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>
+            </configuration>
+        </plugin>
       <plugin>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-maven-plugin</artifactId>
